--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
     <main>
         <img id="banner" src="img/banner_quemsomos3.jpg" alt="Imagem contendo uma equipe esportiva juntando as mãos representando união">
         <h1>ATLÉTICA FATEC ZONA LESTE</h1>
+        <div vw class="enabled">
+              <div vw-access-button class="active"></div>
+              <div vw-plugin-wrapper>
+                <div class="vw-plugin-top-wrapper"></div>
+              </div>
+          </div>
+          <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+          <script>
+              new window.VLibras.Widget('https://vlibras.gov.br/app');
+          </script>
         <section id="caixa-mural">
             <h2>Fique por dentro do que acontece na Atlética Fatec ZL</h2>
             <div class="quadro-mural">
