--- a/loja_virtual.html
+++ b/loja_virtual.html
@@ -46,6 +46,16 @@
     <main id="main-lojavirtual">         
         <img id="banner-lojavirtual" src="img/Design sem nome.jpg" alt="Imagem em amarelo mostarda há uma imagem do lado esquerdo em preto de um homem empurrando um carrinho de compras e do lado direito uma figura em preto de uma coruja">
         <h1 class="titulo">LOJA VIRTUAL</h1>
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+        </script>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
             <li>Loja Virtual</li>
