--- a/modalidades.html
+++ b/modalidades.html
@@ -46,6 +46,16 @@
     <main id="main-modalidades">
         <img id="banner-modalidades" src="img/basquete_partida.jpg" alt="Imagem em preto e branco de uma partida de jogo de basquetebol com um jogador arremessando a bola">
         <h1 class="titulo">MODALIDADES</h1>
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+        </script>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
             <li>Modalidades</li>
