--- a/contato.html
+++ b/contato.html
@@ -47,6 +47,16 @@
     </header>
     <main id="conteudo">
         <h1 class="titulo">FALE CONOSCO</h1>
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+        </script>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
             <li>Fale Conosco</li>
