--- a/quemsomos.html
+++ b/quemsomos.html
@@ -46,6 +46,16 @@
     <main id="main-quemsomos">
         <img id="banner-quemsomos" src="img/banner_quemsomos3.jpg" alt="Imagem contendo uma equipe esportiva juntando as mãos representando união">
         <h1 class="titulo">QUEM SOMOS</h1>
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+        </script>
         <ul class="breadcrumb">
             <li><a href="index.html">Início</a></li>
             <li>Quem somos</li>
