--- a/acessibilidade.html
+++ b/acessibilidade.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página web da Atlética da FATEC Zona Leste">
     <meta name="keywords" content="Atlética, FATEC, Zona Leste">
-    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, Thais Almeida">
+    <meta name="author" content="Alan Serafim, Douglas Silva, Pablo Pontes, Thais Almeida">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
@@ -87,7 +87,7 @@
                 <p>- Talckback: leitor de tela disponível em smartphones Android.</p>
                 <p>Observação: leia no manual do leitor de telas sobre a melhor forma de navegação em páginas web.</p><br>
                 <p>LIBRAS - Língua Brasileira de Sinais</p>
-                <p>Este site é acessível em LIBRAS através do <a href="http://www.vlibras.gov.br/" target="_blank">VLibras</a>.</p>
+                <p>Este site é acessível em LIBRAS através do <a id="vlibraslink" href="http://www.vlibras.gov.br/" target="_blank">VLibras</a>.</p>
                 <p>-Do lado direito de cada página do site existe o ícone de um Widget informando que o site é acessível em LIBRAS.</p>
                 <p>-Para traduzir, basta clicar sobre o ícone e selecionar o texto que deseja traduzir.</p>
                 </section>
