--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página web da Atlética da FATEC Zona Leste">
     <meta name="keywords" content="Atlética, FATEC, Zona Leste">
-    <meta name="author" content="Alan Serafim, Douglas Silva, Nataly Correia, Thais Almeida">
+    <meta name="author" content="Alan Serafim, Douglas Silva, Pablo Pontes, Thais Almeida">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="JS/contraste.js"></script>
